Fix spacing scale by adding missing value for auto spacing

--- a/src/base/_spacing.scss
+++ b/src/base/_spacing.scss
@@ -6,7 +6,8 @@ $space-scale: (0: 0,
     3: 0.75rem,
     4: 1rem,
     5: 1.25rem,
-    6: 1.5rem) !default;
+    6: 1.5rem,
+    auto: auto) !default;
 
 $spacing-properties: (m: margin,
     mt: margin-top,
